Fix hopper counters command error when guessing item color (#1826)
* Fix hopper counters command crash when guessing item color

* Less List types, slightly less copying and clearer Stream chain

* Reverse result equal logic to not search through registries as much

Gets the item being searched once outside instead of getting the id for
every recipe